<resources>
    <string name="app_name">Mini_LinkedIn</string>
    <string name="linkedin_label">LinkedIn</string>
    <string name="name_hint">Your Name</string>
    <string name="email_hint">Your email</string>
    <string name="user_picture">User picture</string>

    <string name="education">Education</string>
    <string name="experience">Experience</string>
    <string name="project">Project</string>

    <string name="add_education">Add education</string>
    <string name="add_experience">Add experience</string>
    <string name="add_project">Add_project</string>

    <string name="edit_education">Edit education</string>
    <string name="edit_experience">Edit experience</string>
    <string name="edit_project">Edit project</string>

    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="experience_edit_what_did_you_do_hint">What did you do</string>
    <string name="experience_edit_title_hint">Title</string>
    <string name="experience_edit_company_hint">Company</string>
    <string name="education_edit_school_hint">School</string>
    <string name="education_edit_major_hint">Major</string>
    <string name="education_edit_courses_hint">Courses</string>
    <string name="project_edit_name_hint">Project name</string>
    <string name="project_edit_details_hint">Details</string>

    <string name="choose_user_picture">Choose user picture</string>
    <string name="saveaspdf">Save As PDF</string>
</resources>
