<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/rootView"
    tools:context="com.example.chengyu.mini_linkedin.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/name_and_email"
                android:layout_marginBottom="@dimen/space_small"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/user_picture"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_hint"
                    android:textSize="@dimen/title_size"
                    android:id="@+id/personal_info_name" />

                <ImageButton
                    android:layout_width="@dimen/icon_button_size"
                    android:layout_height="@dimen/icon_button_size"
                    android:layout_marginLeft="@dimen/space_xsmall"
                    android:src="@drawable/editor_black_18px"
                    android:id="@+id/edit_basic_info" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_hint"
                android:textSize="@dimen/content_size"
                android:layout_below="@+id/name_and_email"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/user_picture"
                android:id="@+id/personal_info_email" />

            <ImageView
                android:layout_width="@dimen/user_picture"
                android:layout_height="@dimen/user_picture"
                android:id="@+id/user_picture"
                android:layout_alignParentRight="true"
                android:src="@drawable/user_ghost"
                android:contentDescription="@string/user_picture"/>
        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/education"
                android:textSize="@dimen/title_size"
                android:id="@+id/education_section" />

            <ImageButton
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:id="@+id/add_education_button"
                android:src="@drawable/add_black_18px"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/add_education"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/education_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/experience"
                android:textSize="@dimen/title_size"
                android:id="@+id/experience_section" />

            <ImageButton
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:id="@+id/add_experience_button"
                android:src="@drawable/add_black_18px"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/add_experience"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/experience_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/project"
                android:textSize="@dimen/title_size"
                android:id="@+id/project_section" />

            <ImageButton
                android:layout_width="@dimen/icon_button_size"
                android:layout_height="@dimen/icon_button_size"
                android:id="@+id/add_project_button"
                android:src="@drawable/add_black_18px"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/add_project"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/project_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
    </LinearLayout>
</ScrollView>
